TAG: refseqload-6-0-12-1
DATE: 03/07/2018
STAFF: sc
CHANGES: TR12662 GMC project
1) refseqload.sh - auto-sequencing

TAG: refseqload-tr12662-BP
DATE: 02/01/2018
STAFF: sc
CHANGES: GMC project

TAG: refseqload-6-0-9-1
DATE: 04/04/2071
STAFF: sc
CHANGES: Merge TR12488 branch to trunk

TAG: refseqload-tr12488-1
DATE: 03/20/2071
STAFF: sc
CHANGES: MICE CRISPIES PROJECT Contig epic, load NT sequences
1) refseqload.config.default - set NT=true

TAG: refseqload-6-0-4-1
DATE: 06/16/2016
STAFF: lec 
CHANGES:
1) convert to git

TAG: refseqload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) refseqload.config.default: Don't mail curator log to mgiadmin

TAG: refseqload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: refseqload-5-2-1-5
DATE: 06/28/2015
STAFF: sc
CHANGES: set JAVARUNTIMEOPTS="-Xms2G -Xmx2G"
4G not supported by version of java on lindon

TAG: refseqload-5-2-1-4
TAG: refseqload-5-2-1-3
DATE: 06/26/2015
STAFF: sc
CHANGES: set JAVARUNTIMEOPTS="-Xms4G -Xmx4G"

TAG: refseqload-5-2-1-2
DATE: 05/06/2015
STAFF: sc
CHANGES:
* refseqload.config.default - APP_CAT_METHOD="gunzip -c". Removed /usr/local/bin

TAG: refseqload-5-2-1-1
DATE: 05/05/2015
STAFF: sc
CHANGES:
* refseqload.config.default - removed QC report config
* refseqload.sh - removed calls to QC reports

TAG: refseqload-4-2-0-1
DATE: 02/16/2009
STAFF: sc
CHANGES: uncommented running of QC reports - they must have been 
inadvertently committed that way at some point 

TAG: refseqload-4-1-3-1
DATE: 11/11/2008
STAFF: lec
CHANGES: refseqload.config.default/set APP_RADAR_MAX to 500000

TAG: refseqload-4-1-1-1
DATE: 07/23/2007
STAFF: sc
CHANGES: TR8092 - Removed reference to SeqRefAssocPair

TAG: refseqload-3-5-4-1
DATE: 01/24/2008
STAFF: sc
CHANGES: TR8743
1) refseqload.config.default - APP_RADAR_MAX=500000000 (was 300MB)
                             - NG=true
2) bin/refseqload.sh - don't attempt to log processed file when
         ${APP_RADAR_INPUT} = false
