@@ -18,18 +18,3 @@ RefSeq Sequence Load: Data, Logs and QC Reports
 <LI><A HREF="/data/loads/genbank/refseqload/logs/refseqload.val.log">Data Validation Log</A>
 </UL>
 
-<H4>QC Reports</H4>
-<UL>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_AttrEdit.rpt">Sequence source attributes that have been curator-edited in MGI and whose incoming (new) value is not equal to its existing MGI value</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_UnresolvedOrganism.rpt">Organisms that could not be translated to a valid MGI Organism</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_InvalidCellLine.rpt">Cell Lines that could not be translated to a valid MGI Cell Line</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_InvalidGender.rpt">Genders that could not be translated to a valid MGI Gender</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_InvalidLibrary.rpt">Libraries that could not be translated to a valid MGI Library</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_InvalidStrain.rpt">Strains that could not be translated to a valid MGI Strain</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_InvalidTissue.rpt">Tissues that could not be translated to a valid MGI Tissue</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_MS_NameConflict.rpt">Discrepencies between the Clone Libraries of any of a Sequence's associated Clones</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_SEQ_Merged.rpt">Sequences that are designated as Merged by the Sequence provider</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_SEQ_OldRef.rpt">Sequence/Reference associations that are no longer in the Sequence provider record</A>
-<LI><A HREF="/data/loads/genbank/refseqload/reports/QC_SEQ_RawSourceConflict.rpt">Sequence Raw Source Attributes (Organism only) where its new raw value differs from its old raw value </A>
-<LI><A HREF="/data/loads/genbank/gbseqload/reports/QC_MS_ChangedLibrary.rpt">Sequences whose Library value has changed since it was last processed in MGI </A>
-</UL>
